# mcp-kit

./: .gitignore  .npmrc  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
docs/: auth-patterns.md  schema-dos-and-donts.md  transport-selection.md  transports.md
lint/: describe-lint.test.ts  describe-lint.ts  package.json  rubric.md  tsconfig.json
lint/src/: cli.ts  discover.ts  score.ts
lint/test/: score.test.ts
python-twin/: README.md  pyproject.toml  requirements-dev.txt
python-twin/mcp_kit_starter/: __init__.py  __main__.py  auth.py  cli.py  config.py  errors.py  server.py  tool.py
python-twin/mcp_kit_starter/tools/: __init__.py  get_current_time.py
python-twin/mcp_kit_starter/transports/: __init__.py  http.py  stdio.py
python-twin/recipes/wrap-reddit-stock/: README.md  conftest.py
python-twin/recipes/wrap-reddit-stock/reddit_recipe/: __init__.py  cli.py  client.py  server.py  source.py  symbols.py  tools.py
python-twin/recipes/wrap-reddit-stock/tests/: test_reddit.py
python-twin/recipes/wrap-yfinance/: README.md  conftest.py
python-twin/recipes/wrap-yfinance/tests/: test_yfinance.py
python-twin/recipes/wrap-yfinance/yfinance_recipe/: __init__.py  cli.py  client.py  server.py  source.py  tools.py
python-twin/tests/: conftest.py  test_server_inmemory.py  test_tool.py
recipes/long-running-job/: README.md  (+1 more)
starter/: package.json  tsconfig.json
starter/py/: README.md  pyproject.toml
starter/py/mcp_kit_starter/: __init__.py  auth.py  cli.py  config.py  errors.py  server.py  tool.py
starter/py/mcp_kit_starter/tools/: __init__.py  get_current_time.py
starter/py/mcp_kit_starter/transports/: __init__.py  http.py  stdio.py
starter/py/tests/: test_auth.py  test_config.py  test_errors.py  test_stdio_e2e.py
(+65 files in other folders)
