[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-kit-starter"
version = "0.1.0"
description = "Hardened MCP server base (Python twin of mcp-kit/starter): transport selection (stdio + Streamable HTTP), an auth hook, structured errors, and a tool helper."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "mcp-kit" }]
keywords = ["mcp", "model-context-protocol", "fastmcp", "starter"]
dependencies = [
  "mcp>=1.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
# Live data for recipes/wrap-yfinance. Not needed for tests (they inject a fake
# source), so it stays out of `dev` and CI.
yfinance = [
  "yfinance>=0.2",
]

[project.scripts]
mcp-kit-starter = "mcp_kit_starter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_kit_starter"]

[tool.pytest.ini_options]
testpaths = ["tests", "recipes"]
addopts = "-q"
